part1/randomStringApp/manifests/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
